[tool.poetry]
name = "introduction-to-algorithms"
version = "0.1.0"
description = "Me practising `Introduction to Algorithms 3rd Edition` aka CLRS"
authors = ["Dushyant Singh Shekhawat <contact@dushyantss.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.4b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
